--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,10 @@
 ##########################
 /config/.env
 /logs/*
-/tmp/*
+/tmp/cache/*
+/tmp/sessions/*
+/tmp/tests/*
+
 
 # Tool specific files #
 #######################
